--- a/examples/esm/index.html
+++ b/examples/esm/index.html
@@ -8,8 +8,7 @@
   <script type="importmap">
     {
       "imports": {
-        "react": "https://dev.jspm.io/react",
-        "react-dom": "https://dev.jspm.io/react-dom"
+        "vue": "https://dev.jspm.io/vue@3"
       }
     }
     </script>
