--- a/examples/iife/index.html
+++ b/examples/iife/index.html
@@ -6,8 +6,7 @@
     <div id="app"></div>
   </body>
 
-  <script src="./../../node_modules/react/umd/react.development.js"></script>
-  <script src="./../../node_modules/react-dom/umd/react-dom.development.js"></script>
+  <script src="./../../node_modules/vue/dist/vue.global.js"></script>
   <script src="./../../dist/index.iife.js"></script>
   <script src="./index.js"></script>
 </html>
