--- a/examples/esm/index.html
+++ b/examples/esm/index.html
@@ -1,16 +1,17 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <script type="importmap">
+      {
+        "imports": {
+          "vue": "./../../dist/vue.es.js"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="app"></div>
   </body>
-  <script type="importmap">
-    {
-      "imports": {
-        "vue": "https://dev.jspm.io/vue@3"
-      }
-    }
-    </script>
+  
   <script src="./index.js" type="module"></script>
 </html>
