--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <!-- <link rel="stylesheet" href="../../dist/index.css" /> -->
+    <link rel="stylesheet" href="../../dist/index.css" />
   </head>
   <body>
     <div id="app"></div>
