--- a/main.html
+++ b/main.html
@@ -13,6 +13,14 @@
       }
     }
   </script>
+  <!-- <script type="importmap">
+    {
+      "imports": {
+        "react": "./npm/react.js",
+        "react-dom":  "./npm/react-dom.js"
+      }
+    }
+  </script> -->
   <body>
     <div id="app"></div>
   </body>
