--- a/example/index.html
+++ b/example/index.html
@@ -6,5 +6,5 @@
   <body>
     <div id="app"></div>
   </body>
-  <script src="../../dist/index.js"></script>
+  <script src="../../dist/front/index.js"></script>
 </html>
