--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <!-- <link rel="stylesheet" href="../../dist/index.css" /> -->
+    <link rel="stylesheet" href="../../dist/index.css" />
+    <script src="./../node_modules/react/umd/react.development.js"></script>
+    <script src="./../node_modules/react-dom/umd/react-dom.development.js"></script>
   </head>
   <body>
     <div id="app"></div>
