--- a/example/index.html
+++ b/example/index.html
@@ -3,10 +3,14 @@
     
   </head>
   <body>
-    <p>Hello World</p>
-    <div id="app"></div>
+    <h1>Example</h1>
+    <h2>React:</h2>
+    <div id="root-react"></div>
+    <h2>Vue:</h2>
+    <div id="root-vue"></div>
   </body>
   <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
-  <script type="module" src="index.js"></script>
+  <script src="https://unpkg.com/vue@3.2.26/dist/vue.global.js"></script>
+  <script type="module" src="./index.js"></script>
 </html>
