--- a/packages/node/src/html/view.html
+++ b/packages/node/src/html/view.html
@@ -1,18 +1,12 @@
-<view>
-  <view class="box-1">{{title}}</view>
-  <view class="box-2">{{subTitle}}</view>
-  <view class="box-3" xx:for="{{list}}" > 
-    {{item}}
-  </view>
-
-  <view class="box-4" xx:if="{{type == '1'}}" >
-    001
-  </view>
-  <view class="box-4" xx:elif="{{type == '2'}}" >
-    002
-  </view>
-  <view class="box-4" xx:else >
-    003
-  </view>
-  <view bindtap="myClickAction">Click Me</view>
-</view>
+<div>
+  <div class="class001">
+    <span @:if="{{name}}">My name is {name}</span>
+    <span @:else>No Name</span>
+  </div>
+  <div class="class002">
+    <span wx:for="{{list}}" wx:for-index="i" wx:for-item="item">
+      {{item}}
+    </span>
+  </div>
+  <button bindtap="{{bindtap}}">Click Btn</button>
+</div>
