--- a/packages/node/src/html/view.html
+++ b/packages/node/src/html/view.html
@@ -1,10 +1,10 @@
-<div>
+<div class="class000">
   <div class="class001">
-    <span @:if="{{name}}">My name is {name}</span>
+    <span @:if="{{myname}}">My name is {{myname}}</span>
     <span @:else>No Name</span>
   </div>
   <div class="class002">
-    <span wx:for="{{list}}" wx:for-index="i" wx:for-item="item">
+    <span @:for="{{list}}" @:for-index="i" @:for-item="item">
       {{item}}
     </span>
   </div>
