--- a/packages/node/src/html/view.html
+++ b/packages/node/src/html/view.html
@@ -8,5 +8,5 @@
       {{item}}
     </span>
   </div>
-  <button bindtap="{{bindtap}}">Click Btn</button>
+  <button onClick="{{onClick}}">Click Btn</button>
 </div>
