--- a/packages/parse/src/html/view.html
+++ b/packages/parse/src/html/view.html
@@ -8,5 +8,5 @@
       {{item}}
     </span>
   </div>
-  <button onClick="{{onClick}}">Click Btn</button>
+  <button onClick="onClick">Click Btn</button>
 </div>
