--- a/packages/parse/index.html
+++ b/packages/parse/index.html
@@ -10,7 +10,7 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
   <script type="module">
     async function main() {
-      const name = 'hello';
+      const name = 'count';
       const App = (await import(`./dist/react/${name}.js`)).default
       ReactDOM.render(
         React.createElement(App, {
