--- a/example/index.html
+++ b/example/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-    <div>example</div>
+    <div id="app">example</div>
 
     <script type="module" src="./index.js"></script>
   </body>
