--- a/example/drag-layout.html
+++ b/example/drag-layout.html
@@ -11,12 +11,8 @@
   </head>
   <body>
 
-    <div id="app">
-      <li>
-        <a href="./drag-layout.html">drag-layout</a>
-      </li>
-    </div>
+    <div id="app">example</div>
 
-    <!-- <script type="module" src="./index.js"></script> -->
+    <script type="module" src="./drag-layout.js"></script>
   </body>
 </html>
