--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <style></style>
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,limitimum-scale=1.0,user-scalable=no">
     <style>
       html, body {
         margin: 0; padding: 0;
@@ -16,7 +16,5 @@
         <a href="./drag-layout.html">drag-layout</a>
       </li>
     </div>
-
-    <!-- <script type="module" src="./index.js"></script> -->
   </body>
 </html>
