--- a/example/index.html
+++ b/example/index.html
@@ -15,6 +15,9 @@
       <li>
         <a href="./drag-layout.html">drag-layout</a>
       </li>
+      <li>
+        <a href="./drag-move.html">drag-move</a>
+      </li>
     </div>
   </body>
 </html>
